--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -1,3 +1,29 @@
+# l10n file - zh-CN - 简体中文
+
+# 文本中可使用以下语法
+# 1. **粗体**
+# 2.  *斜体*
+# 3. [[red]]颜色[[/]]
+# 4. `文本`（自动着色绿色）
+# 5. <文本>（自动着色青色）
+#
+# 对于颜色的使用，请参考：
+# RED     = 紧急情况，错误
+# YELLOW  = 警告
+#
+# CYAN    = 强调
+# GREEN   = 文本内容
+#
+# GRAY    = 不强调，忽略
+# GREY    = 同上
+#
+# 对于 分析器 结果：
+# YELLOW  = 移动操作 = ">" 符号
+# GREEN   = 创建操作 = "+" 符号
+# RED     = 丢失操作 = "-" 符号
+# MAGENTA = 擦除操作 = "&" 符号
+# CYAN    = 修改操作 = "*" 符号
+
 common:
   confirm: |
     是否执行上述操作？（Y/n）：
@@ -161,13 +187,13 @@ jvv:
 jv:
   version:
     header: |
-      JustEnoughVCS - %{version}
+      JustEnoughVCS - [[cyan]]%{version}[[/]]
 
     compile_info: |
       编译信息：
-        时间：%{build_time}
-        目标：%{build_target}
-        平台：%{build_platform} - %{build_toolchain}
+        时间：[[cyan]]%{build_time}[[/]]
+        目标：[[cyan]]%{build_target}[[/]]
+        平台：[[cyan]]%{build_platform} - %{build_toolchain}[[/]]
 
   tip:
     not_workspace: |
@@ -196,10 +222,10 @@ jv:
       jv u 下载最新信息，jv t 追踪文件，jv a 对齐文件结构到表，jv in/out 导入或导出文件
 
     **上游库**：
-      login  <账户> <地址>    - 设置账户、定向并获得上游信息    [远程]
-      direct <地址>           - 定向到工作区到上游库            [远程]
+      login  <账户> <地址>    - 设置账户、定向并获得上游信息    [[cyan]][远程][[/]]
+      direct <地址>           - 定向到工作区到上游库            [[cyan]][远程][[/]]
       unstain                 - 祛色工作区，清除关联
-      update                  - 同步最新的信息                  [远程]
+      update                  - 同步最新的信息                  [[cyan]][远程][[/]]
 
     **账户**：
       account [list|as|add|remove|movekey|genpub]
@@ -217,9 +243,9 @@ jv:
         list                  - 列出所有表
         use                   - 使用表，并开始工作
         exit                  - 退出表，清除当前修改
-        make                  - 创建新表以供自己使用            [远程]
-        drop                  - 抛弃表以供他人使用              [远程]
-        align                 - 对齐文件结构到表                [远程]
+        make                  - 创建新表以供自己使用            [[cyan]][远程][[/]]
+        drop                  - 抛弃表以供他人使用              [[cyan]][远程][[/]]
+        align                 - 对齐文件结构到表                [[cyan]][远程][[/]]
 
     **上下文查询**：
       here                    - 显示当前路径的相关信息
@@ -227,16 +253,16 @@ jv:
       info                    - 显示单个文件的状态
 
     **文件传递**：
-      import <文件包名称>     - 从导入区导入文件                [远程]
-      import <参照表中目录>   - 从参照表导入文件                [远程]
-      export <文件> <表名称>  - 导出文件到其他表                [远程]
+      import <文件包名称>     - 从导入区导入文件                [[cyan]][远程][[/]]
+      import <参照表中目录>   - 从参照表导入文件                [[cyan]][远程][[/]]
+      export <文件> <表名称>  - 导出文件到其他表                [[cyan]][远程][[/]]
 
     **文件操作**：
-      move  <文件> <到>       - 安全地重命名文件                [远程]
-      track <文件>            - 追踪文件内容到最新版本          [远程]
-      hold  <文件>            - 拿取文件，同步版本并获得编辑权  [远程]
-      throw <文件>            - 丢弃文件，同步版本并放弃编辑权  [远程]
-      jump  <文件> <版本>     - 将文件的版本跳转至其他版本      [远程]
+      move  <文件> <到>       - 安全地重命名文件                [[cyan]][远程][[/]]
+      track <文件>            - 追踪文件内容到最新版本          [[cyan]][远程][[/]]
+      hold  <文件>            - 拿取文件，同步版本并获得编辑权  [[cyan]][远程][[/]]
+      throw <文件>            - 丢弃文件，同步版本并放弃编辑权  [[cyan]][远程][[/]]
+      jump  <文件> <版本>     - 将文件的版本跳转至其他版本      [[cyan]][远程][[/]]
 
     **内建文档**：
       docs list               - 列出所有可用的文档
@@ -647,7 +673,7 @@ jv:
 
     status:
       no_sheet_in_use: |
-        您并没有使用任何一张表！无法在此状态分析工作区状态
+        您并没有使用任何一张表！无法在此情况下分析工作区状态
         **提示**：您可以使用 `jv use <表名>` 选择并使用一张表
 
       analyze: |
@@ -714,25 +740,26 @@ jv:
           很好，本地工作区未产生结构偏差，无需对齐！
 
         suggestion_1: |
-          建议 **确认擦除项**：
-          文件在远程已不存在，但是本地仍存在！
-          **例如**：使用 `jv align %{example_erased} confirm` 来确认该擦除项！
-          **注意**：确认后，本地映射将被擦除，同时，该位置的文件将被移走
+          **建议**：确认 [[magenta]]擦除项[[/]]
+          **例如**：使用 `jv align %{example_erased} confirm` 来确认该 [[magenta]]擦除项[[/]]！
+
+          [[yellow]]**注意**：确认后，本地映射将被擦除，同时，该位置的文件将被移走[[/]]
 
         suggestion_2: |
-          建议 **确认丢失项**：
-          无法确认文件丢失意图为 `删除` 或 `移动`！
-          因此，您需要通过命令以确认行为：
-          **例如**：使用 `jv align %{example_lost} <行为>` 来确认该丢失
-          **确认删除**：填写 `confirm` 来确认您的操作是一次 `删除`
-          **声明移动**：填写 创建项 与其形成移动关系
+          **建议**：确认 [[red]]丢失项[[/]]
+          无法确认文件丢失意图为 [[red]]删除[[/]] 或 [[yellow]]移动[[/]]！
+          **例如**：使用 `jv align %{example_lost} <行为>` 来处理该 [[red]]丢失项[[/]]
+
+          **确认删除**：填写 `confirm` 来确认您的操作是一次 [[red]]删除[[/]]
+          **声明移动**：填写 [[green]]创建项[[/]] 与其形成 [[yellow]]移动[[/]] 关系
 
         suggestion_3: |
-          只有 **移动项**，请确认他们基于本地或远程
+          **建议**：对齐 [[yellow]]移动项[[/]]，确认他们基于 本地 或 远程
           **例如**：使用 `jv align moved [local|remote]`          批量对齐
               或使用 `jv align %{example_moved} [local|remote]` 精确对齐移动
-          **对齐至本地**：需联网，会修改上游映射至您本地实际的位置
-          **对齐至远程**：可脱机，会将本地文件移动至上游地址的位置
+
+          **对齐至本地**：联网，修改上游映射至本地位置
+          **对齐至远程**：脱机，将本地文件移至上游位置
 
     docs:
       list:
