Escape special characters in markdown formatting
The `md` function now handles backslash escapes for specific characters
(*, <, >, `) to allow them to be displayed literally in formatted text.
This fixes rendering of help documentation that uses these characters as
symbols.

--- a/locales/help_docs/en.yml
+++ b/locales/help_docs/en.yml
@@ -875,14 +875,14 @@ jv:
         -      Lost:         %{path}
 
       moved_item: |
-        >     Moved: Remote  %{from}
+        \>     Moved: Remote  %{from}
                       Local  %{to}
 
       erased_item: |
         &    Erased：        %{path}
 
       modified_item: |
-        *  Modified:         %{path}
+        \*  Modified:         %{path}
 
       invalid_modified_item: |
         x  Modified:         %{path} (%{reason})
