--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -242,33 +242,33 @@ jv:
 
     **表操作**：
       sheet [list|use|exit|make|drop|align]
-        list                  - 列出所有表
-        use                   - 使用表，并开始工作
-        exit                  - 退出表，清除当前修改
-        make                  - 创建新表以供自己使用            [[cyan]][远程][[/]]
-        drop                  - 抛弃表以供他人使用              [[cyan]][远程][[/]]
-        align                 - 对齐文件结构到表                [[cyan]][远程][[/]]
+        list                   - 列出所有表
+        use                    - 使用表，并开始工作
+        exit                   - 退出表，清除当前修改
+        make                   - 创建新表以供自己使用            [[cyan]][远程][[/]]
+        drop                   - 抛弃表以供他人使用              [[cyan]][远程][[/]]
+        align                  - 对齐文件结构到表                [[cyan]][远程][[/]]
 
     **上下文查询**：
-      here                    - 显示当前路径的相关信息
-      status                  - 显示当前表的状态信息
-      info                    - 显示单个文件的状态
+      here                     - 显示当前路径的相关信息
+      status                   - 显示当前表的状态信息
+      info                     - 显示单个文件的状态
 
     **文件传递**：
-      import <文件包名称>     - 从导入区导入文件                [[cyan]][远程][[/]]
-      import <参照表中目录>   - 从参照表导入文件                [[cyan]][远程][[/]]
-      export <文件> <表名称>  - 导出文件到其他表                [[cyan]][远程][[/]]
+      share <文件> <表> <描述> - 分享当前上下文的文件至其他表    [[cyan]][远程][[/]]
+      share import <分享ID>    - 将分享导入到当前表              [[cyan]][远程][[/]]
+      share status             - 显示当前表的分享状态
 
     **文件操作**：
-      move  <文件> <到>       - 安全地重命名文件                [[cyan]][远程][[/]]
-      track <文件>            - 追踪文件内容到最新版本          [[cyan]][远程][[/]]
-      hold  <文件>            - 拿取文件，同步版本并获得编辑权  [[cyan]][远程][[/]]
-      throw <文件>            - 丢弃文件，同步版本并放弃编辑权  [[cyan]][远程][[/]]
-      jump  <文件> <版本>     - 将文件的版本跳转至其他版本      [[cyan]][远程][[/]]
+      move  <文件> <到>        - 安全地重命名文件                [[cyan]][远程][[/]]
+      track <文件>             - 追踪文件内容到最新版本          [[cyan]][远程][[/]]
+      hold  <文件>             - 拿取文件，同步版本并获得编辑权  [[cyan]][远程][[/]]
+      throw <文件>             - 丢弃文件，同步版本并放弃编辑权  [[cyan]][远程][[/]]
+      jump  <文件> <版本>      - 将文件的版本跳转至其他版本      [[cyan]][远程][[/]]
 
     **内建文档**：
-      docs list               - 列出所有可用的文档
-      docs <文档名称>         - 查看指定文档的内容
+      docs list                - 列出所有可用的文档
+      docs <文档名称>          - 查看指定文档的内容
 
     您可以使用 jv <命令名称> --help 来查询更详细的帮助！
 
@@ -407,26 +407,24 @@ jv:
     移动映射操作会修改上游的映射，并同步修改本地结构（使用 `--only-remote` 取消同步修改）
     在移动完成后，通常需要 `jv align moved remote` 将本地结构同步至上游
 
-  export: |
-    **将文件导出至其他表的待导入区**
-    **用法**：jv export <文件> <目标表> -m <描述> -n <文件包名称>
-
-    **例如**：jv export data.csv analytics -m "导出分析数据" -n "analysis_data"
-    该操作会将指定的文件打包并发送到目标表的导入区
-
-    其他协作者可以在目标表中使用 jv import 命令来导入这些文件
-
-  import: |
-    **导入文件到当前表**
+  share: |
+    **分享文件的可见性**
     **用法**：
-    jv import <文件包名称> - 从导入区导入文件
-    jv import <参照表中目录> - 从参照表导入文件
+    jv share <文件> <表> <描述> - 分享映射到其他表
+    jv share --work - 编辑器模式下分享文件
 
-    **例如**：
-    jv import Player_Import - 来自导入区定义的名称
-    jv import ref@Data/Player.csv - 来自参照表的路径
+    jv share status - 查看传入的分享
 
-    导入操作会将文件从其他表或导入区复制到当前工作区
+    jv share import <分享ID> - 将分享导入到当前表
+    jv share import <REF映射> - 从 `ref` 表中导入映射
+
+    **提示**：import 命令可使用如下参数
+      --only-remote - 只在表中导入映射，不修改本地结构
+      --strict - 严格的导入模式，拒绝所有冲突，这是默认的方案
+      --skip - 跳过冲突项
+      --overwrite - 强制覆盖冲突的映射，危险的操作
+
+    **分享** 是将文件可见性交由其他人的最简途径
 
   direct: |
     **定向到指定上游库，并染色该工作区**
