--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -252,7 +252,7 @@ jv:
     **上下文查询**：
       here                     - 显示当前路径的相关信息
       status                   - 显示当前表的状态信息
-      info                     - 显示单个文件的状态
+      info <文件>              - 显示单个文件的状态
 
     **文件传递**：
       share <文件> <表> <描述> - 分享当前上下文的文件至其他表    [[cyan]][远程][[/]]
@@ -360,6 +360,15 @@ jv:
     - 修改的文件
 
     这是了解当前表文件状态的快速方式
+
+  info: |
+    **显示文件详细信息**
+    **用法**：jv info <文件路径>
+
+    显示指定文件的详细信息，包括：
+    - 文件的历史变更
+    - 文件在 `ref` 中的位置
+    - 文件在 `ref` 中的版本
 
   track: |
     **追踪或拉取文件**
