Update sheet list display and share command help text
- Change "YOURS" to "VISIBLE TO YOU" and "您的表" to "您可见的表"
- Add reference sheet suffix indicator for reference sheets
- Update Chinese share command help text to clarify mapping operations
- Rename sheet list variables for clarity (my_sheets → visible_sheets,
  other_sheets → invisible_sheets)
- Show status automatically after switching sheets

--- a/locales/help_docs/en.yml
+++ b/locales/help_docs/en.yml
@@ -733,11 +733,13 @@ jv:
     sheet:
       list:
         your_sheet: |
-          **YOURS**:
+          **VISIBLE TO YOU**:
         your_sheet_item: |
           %{number}. %{name}
         your_sheet_item_use: |
-          %{number}. %{name} (CURRENT)
+          %{number}. %{name} [Current]
+        reference_sheet_suffix: |
+          [REF]
         other_sheet: |
           **OTHERS**:
         other_sheet_item: |
