--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -373,15 +373,26 @@ jv:
     - 文件在 `ref` 中的版本
 
   track: |
-    **追踪或拉取文件**
+    **追踪文件至最新事实**
     **用法**：jv track <文件路径>
 
-    **例如**：jv track src/main.rs
-    追踪新文件时，会创建并上传 “第一版本”，然后自动持有该文件的编辑权
-    追踪 *已持有* 文件时会上传新版本到上游库，以更新至最新版本。
-    追踪 *未持有* 或 *不存在* 的远程文件时，会下载或更新本地文件版本至最新
+    它不是上传，也不是下载，而是对 [[cyan]]“哪一个版本应被视为事实”[[/]] 的结果声明。
 
-    追踪文件是版本控制的基础操作，确保您的上游和本地文件时刻都是最新的
+    **创建**
+    当工作区存在未被追踪的文件时，该文件尚不存在于公认事实中
+    执行追踪将创建该文件的事实版本，写入您的表，并授予您编辑权
+    此时，您是 **该事实的撰写者**
+
+    **更新**
+    当您持有文件，且基于当前最新事实进行编辑时，
+    您工作区中的版本将被视为新的最新事实
+    执行追踪将 **更新该事实到上游**
+
+    **同步**
+    当您不持有文件、基于过期事实编辑，或本地不存在该文件时，
+    您的修改不具备事实效力，一切以上游最新版为准
+    执行追踪将 **同步上游事实到本地**
+    若需覆盖本地修改，必须显式指定 `--overwrite`
 
   hold: |
     **拿取文件：从上游库获得该文件的编辑权**
